syntax = "proto3";
package node;
import "google/protobuf/wrappers.proto";
option go_package = "github.com/Layr-Labs/eigenda/api/grpc/lightnode";

service Source {
  rpc StreamData(StreamDataRequest) returns (stream StreamDataReply) {}
  rpc RequestPushes(RequestPushesRequest) returns (RequestPushesReply) {}
  rpc GetData(GetDataRequest) returns (GetDataReply) {}
}

service Destination {
  rpc ReceiveData(ReceiveDataRequest) returns (ReceiveDataReply) {}
}

message StreamDataRequest {

}

message StreamDataReply {
  bytes data = 1;
}

message RequestPushesRequest {
  string destination = 1;
}

message RequestPushesReply {

}

message GetDataRequest {
  bytes key = 1;
}

message GetDataReply {
  bytes data = 1;
}

message ReceiveDataRequest {
  bytes data = 1;
}

message ReceiveDataReply {

}

